GNU gzip NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** Bug fixes

  gzip -k -v no longer reports that files are replaced.
  [bug present since the beginning]


* Noteworthy changes in release 1.6 (2013-06-09) [stable]

** New features

  gzip now accepts the --keep (-k) option, for consistency with tools
  like xz, lzip and bzip2.  With this option, gzip no longer removes
  named input files when compressing or decompressing.

** Bug fixes

  gzip -d no longer malfunctions with certain invalid data in 'pack' format.
  [bug introduced in gzip-0.8]

  When overwriting, gzip no longer acts as if you typed "y" when you type "n",
  on some platforms when compiled with optimization.
  [bug introduced in gzip-1.3.6]

  zgrep no longer malfunctions with a multi-digit context option like -15.
  Now, it passes that option to grep (equivalent to -C15) just as it does
  for single-digit options. [bug introduced in gzip-1.3.12]

  zmore now acts more like 'more', and is more portable to POSIXish hosts.


* Noteworthy changes in release 1.5 (2012-06-17) [stable]

** Bug fixes

  gzip -d now decodes and checks header CRC16 checksums as specified by
  the FHCRC section of Internet RFC 1952.

  "gzip -d -S '' precious.gz" is now rejected immediately.  Before,
  that command would emulate "rm -i precious.gz", but with an easily-
  misunderstood prompt.  I.e., gzip would ask if it's ok to remove the
  existing file, "precious.gz".  If you made the mistake of saying "yes",
  it would remove that input file before attempting to uncompress it.

  gzip -cdf now properly handles input consisting of gzip'd data followed
  by uncompressed data.  Before it would output raw compressed input, too.
  For example, now "(printf x|gzip; echo y)|gzip -dcf" prints "xy\n",
  while before it would print "x<compressed data>y\n".

  gzip -rf no longer compresses files more than once (e.g., replacing